--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-3.34MB/s(Youtube:不良林), server: 46.182.107.137, port: 443, type: vmess, uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/290016213035, ws-headers: {Host: 46.182.107.137}}
-  - {name: 🇺🇸 美国-1.55MB/s(Youtube:不良林), server: 38.121.43.71, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇳🇱 荷兰-3.36MB/s(Youtube:不良林), server: 213.183.59.206, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇳🇱 荷兰-2.93MB/s(Youtube:不良林), server: 213.183.59.206, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 捷克-624.6KB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 波兰-1.98MB/s(Youtube:不良林), server: 217.30.10.65, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 塞尔维亚-173.4KB/s(Youtube:不良林), server: 194.71.126.31, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇨🇳 中国-224.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-5.98MB/s(Youtube:不良林), server: ntw01.vsvideo.live, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, sni: ntw01.vsvideo.live, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.44MB/s(Youtube:不良林), server: 38.75.136.102, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 波兰-1.37MB/s(Youtube:不良林), server: 217.30.10.63, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
   - {name: 波兰-1.32MB/s(Youtube:不良林), server: 217.30.10.63, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
   - {name: 波兰-1.53MB/s(Youtube:不良林), server: 217.30.10.63, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.36MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.93MB/s(Youtube:不良林)
-      - 捷克-624.6KB/s(Youtube:不良林)
+      - 波兰-1.98MB/s(Youtube:不良林)
+      - 塞尔维亚-173.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
       - 波兰-1.37MB/s(Youtube:不良林)
       - 波兰-1.32MB/s(Youtube:不良林)
       - 波兰-1.53MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.36MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.93MB/s(Youtube:不良林)
-      - 捷克-624.6KB/s(Youtube:不良林)
+      - 波兰-1.98MB/s(Youtube:不良林)
+      - 塞尔维亚-173.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
       - 波兰-1.37MB/s(Youtube:不良林)
       - 波兰-1.32MB/s(Youtube:不良林)
       - 波兰-1.53MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.36MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.93MB/s(Youtube:不良林)
-      - 捷克-624.6KB/s(Youtube:不良林)
+      - 波兰-1.98MB/s(Youtube:不良林)
+      - 塞尔维亚-173.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
       - 波兰-1.37MB/s(Youtube:不良林)
       - 波兰-1.32MB/s(Youtube:不良林)
       - 波兰-1.53MB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-5.98MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.36MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.93MB/s(Youtube:不良林)
-      - 捷克-624.6KB/s(Youtube:不良林)
+      - 波兰-1.98MB/s(Youtube:不良林)
+      - 塞尔维亚-173.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
       - 波兰-1.37MB/s(Youtube:不良林)
       - 波兰-1.32MB/s(Youtube:不良林)
       - 波兰-1.53MB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.36MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.93MB/s(Youtube:不良林)
-      - 捷克-624.6KB/s(Youtube:不良林)
+      - 波兰-1.98MB/s(Youtube:不良林)
+      - 塞尔维亚-173.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
       - 波兰-1.37MB/s(Youtube:不良林)
       - 波兰-1.32MB/s(Youtube:不良林)
       - 波兰-1.53MB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.36MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.93MB/s(Youtube:不良林)
-      - 捷克-624.6KB/s(Youtube:不良林)
+      - 波兰-1.98MB/s(Youtube:不良林)
+      - 塞尔维亚-173.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
       - 波兰-1.37MB/s(Youtube:不良林)
       - 波兰-1.32MB/s(Youtube:不良林)
       - 波兰-1.53MB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.36MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.93MB/s(Youtube:不良林)
-      - 捷克-624.6KB/s(Youtube:不良林)
+      - 波兰-1.98MB/s(Youtube:不良林)
+      - 塞尔维亚-173.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
       - 波兰-1.37MB/s(Youtube:不良林)
       - 波兰-1.32MB/s(Youtube:不良林)
       - 波兰-1.53MB/s(Youtube:不良林)
