--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 波兰-1.98MB/s(Youtube:不良林), server: 217.30.10.65, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 塞尔维亚-173.4KB/s(Youtube:不良林), server: 194.71.126.31, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇳🇱 荷兰-1020.8KB/s(Youtube:不良林), server: 37.120.192.158, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-2.61MB/s(Youtube:不良林), server: 38.121.43.71, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-1.97MB/s(Youtube:不良林), server: 38.121.43.71, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-1.98MB/s(Youtube:不良林), server: 38.121.43.71, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇳 中国-224.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-5.98MB/s(Youtube:不良林), server: ntw01.vsvideo.live, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, sni: ntw01.vsvideo.live, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.44MB/s(Youtube:不良林), server: 38.75.136.102, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 波兰-1.37MB/s(Youtube:不良林), server: 217.30.10.63, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 波兰-1.46MB/s(Youtube:不良林), server: 217.30.10.63, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
   - {name: 波兰-1.32MB/s(Youtube:不良林), server: 217.30.10.63, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
   - {name: 波兰-1.53MB/s(Youtube:不良林), server: 217.30.10.63, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
   - {name: 波兰-1.23MB/s(Youtube:不良林), server: 217.30.10.63, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-1.98MB/s(Youtube:不良林)
-      - 塞尔维亚-173.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1020.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 波兰-1.37MB/s(Youtube:不良林)
+      - 波兰-1.46MB/s(Youtube:不良林)
       - 波兰-1.32MB/s(Youtube:不良林)
       - 波兰-1.53MB/s(Youtube:不良林)
       - 波兰-1.23MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 波兰-1.98MB/s(Youtube:不良林)
-      - 塞尔维亚-173.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1020.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 波兰-1.37MB/s(Youtube:不良林)
+      - 波兰-1.46MB/s(Youtube:不良林)
       - 波兰-1.32MB/s(Youtube:不良林)
       - 波兰-1.53MB/s(Youtube:不良林)
       - 波兰-1.23MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-1.98MB/s(Youtube:不良林)
-      - 塞尔维亚-173.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1020.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 波兰-1.37MB/s(Youtube:不良林)
+      - 波兰-1.46MB/s(Youtube:不良林)
       - 波兰-1.32MB/s(Youtube:不良林)
       - 波兰-1.53MB/s(Youtube:不良林)
       - 波兰-1.23MB/s(Youtube:不良林)
@@ -66,19 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-5.98MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 波兰-1.98MB/s(Youtube:不良林)
-      - 塞尔维亚-173.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1020.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 波兰-1.37MB/s(Youtube:不良林)
+      - 波兰-1.46MB/s(Youtube:不良林)
       - 波兰-1.32MB/s(Youtube:不良林)
       - 波兰-1.53MB/s(Youtube:不良林)
       - 波兰-1.23MB/s(Youtube:不良林)
@@ -88,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 波兰-1.98MB/s(Youtube:不良林)
-      - 塞尔维亚-173.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1020.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 波兰-1.37MB/s(Youtube:不良林)
+      - 波兰-1.46MB/s(Youtube:不良林)
       - 波兰-1.32MB/s(Youtube:不良林)
       - 波兰-1.53MB/s(Youtube:不良林)
       - 波兰-1.23MB/s(Youtube:不良林)
@@ -104,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-1.98MB/s(Youtube:不良林)
-      - 塞尔维亚-173.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1020.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 波兰-1.37MB/s(Youtube:不良林)
+      - 波兰-1.46MB/s(Youtube:不良林)
       - 波兰-1.32MB/s(Youtube:不良林)
       - 波兰-1.53MB/s(Youtube:不良林)
       - 波兰-1.23MB/s(Youtube:不良林)
@@ -129,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-1.98MB/s(Youtube:不良林)
-      - 塞尔维亚-173.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1020.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 波兰-1.37MB/s(Youtube:不良林)
+      - 波兰-1.46MB/s(Youtube:不良林)
       - 波兰-1.32MB/s(Youtube:不良林)
       - 波兰-1.53MB/s(Youtube:不良林)
       - 波兰-1.23MB/s(Youtube:不良林)
