--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-1020.8KB/s(Youtube:不良林), server: 37.120.192.158, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-2.61MB/s(Youtube:不良林), server: 38.121.43.71, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-1.97MB/s(Youtube:不良林), server: 38.121.43.71, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-1.98MB/s(Youtube:不良林), server: 38.121.43.71, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-224.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-829.4KB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-2.45MB/s(Youtube:不良林), server: 38.75.136.102, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 波兰-240.4KB/s(Youtube:不良林), server: 217.30.10.63, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 波兰-1.98MB/s(Youtube:不良林), server: 217.30.10.65, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 波兰-435.3KB/s(Youtube:不良林), server: 217.30.10.63, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
   - {name: 波兰-1.46MB/s(Youtube:不良林), server: 217.30.10.63, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
   - {name: 波兰-1.32MB/s(Youtube:不良林), server: 217.30.10.63, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
   - {name: 波兰-1.53MB/s(Youtube:不良林), server: 217.30.10.63, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 波兰-1.23MB/s(Youtube:不良林), server: 217.30.10.63, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
-  - {name: 🇺🇸 美国-804.0KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.12MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1020.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-829.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 波兰-240.4KB/s(Youtube:不良林)
+      - 波兰-1.98MB/s(Youtube:不良林)
+      - 波兰-435.3KB/s(Youtube:不良林)
       - 波兰-1.46MB/s(Youtube:不良林)
       - 波兰-1.32MB/s(Youtube:不良林)
       - 波兰-1.53MB/s(Youtube:不良林)
-      - 波兰-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-804.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-1020.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-829.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 波兰-240.4KB/s(Youtube:不良林)
+      - 波兰-1.98MB/s(Youtube:不良林)
+      - 波兰-435.3KB/s(Youtube:不良林)
       - 波兰-1.46MB/s(Youtube:不良林)
       - 波兰-1.32MB/s(Youtube:不良林)
       - 波兰-1.53MB/s(Youtube:不良林)
-      - 波兰-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-804.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1020.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-829.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 波兰-240.4KB/s(Youtube:不良林)
+      - 波兰-1.98MB/s(Youtube:不良林)
+      - 波兰-435.3KB/s(Youtube:不良林)
       - 波兰-1.46MB/s(Youtube:不良林)
       - 波兰-1.32MB/s(Youtube:不良林)
       - 波兰-1.53MB/s(Youtube:不良林)
-      - 波兰-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-804.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-1020.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-829.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 波兰-240.4KB/s(Youtube:不良林)
+      - 波兰-1.98MB/s(Youtube:不良林)
+      - 波兰-435.3KB/s(Youtube:不良林)
       - 波兰-1.46MB/s(Youtube:不良林)
       - 波兰-1.32MB/s(Youtube:不良林)
       - 波兰-1.53MB/s(Youtube:不良林)
-      - 波兰-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-804.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1020.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-829.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 波兰-240.4KB/s(Youtube:不良林)
+      - 波兰-1.98MB/s(Youtube:不良林)
+      - 波兰-435.3KB/s(Youtube:不良林)
       - 波兰-1.46MB/s(Youtube:不良林)
       - 波兰-1.32MB/s(Youtube:不良林)
       - 波兰-1.53MB/s(Youtube:不良林)
-      - 波兰-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-804.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1020.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-829.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 波兰-240.4KB/s(Youtube:不良林)
+      - 波兰-1.98MB/s(Youtube:不良林)
+      - 波兰-435.3KB/s(Youtube:不良林)
       - 波兰-1.46MB/s(Youtube:不良林)
       - 波兰-1.32MB/s(Youtube:不良林)
       - 波兰-1.53MB/s(Youtube:不良林)
-      - 波兰-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-804.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1020.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-829.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 波兰-240.4KB/s(Youtube:不良林)
+      - 波兰-1.98MB/s(Youtube:不良林)
+      - 波兰-435.3KB/s(Youtube:不良林)
       - 波兰-1.46MB/s(Youtube:不良林)
       - 波兰-1.32MB/s(Youtube:不良林)
       - 波兰-1.53MB/s(Youtube:不良林)
-      - 波兰-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-804.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
